basic error debug and url changes

--- a/patient/templates/patient/search_doctor.html
+++ b/patient/templates/patient/search_doctor.html
@@ -49,7 +49,7 @@
                       <tr class="table-secondary">
                         <th>{{doctor.doctorID}}</th>
                         <td>{{doctor.department}}</td>
-                        <th>Dr.{{doctor.user.first_name}}&nbsp;{{doctor.user.last_name}}</th>
+                        <th>Dr.{{doctor.user.first_name}} {{doctor.user.last_name}}</th>
                         <td>{{doctor.user.email}}</td>
                         <td>{{doctor.phone_number}}</td>
                         <td><a href="doctor_profile/{{doctor.id}}" type="button" class="btn btn-primary">View Profile</a></td>
