--- a/roleadmin/templates/roleadmin/doctor_list.html
+++ b/roleadmin/templates/roleadmin/doctor_list.html
@@ -40,7 +40,7 @@
                             </a>
                         </div>
                     </div>
-                    <h4 class="doctor-name text-ellipsis"><a>{{doctor.user.first_name}}&nbsp;{{doctor.user.last_name}}</a></h4>
+                    <h4 class="doctor-name text-ellipsis"><a>{{doctor.user_first_name}}{{doctor.user.last_name}}</a></h4>
                     <div class="doc-prof">{{doctor.department}}</div>
                     <div class="user-country">
                         <i class="fa fa-map-marker"></i> {{doctor.address}}
