frontend changes in dashboard

--- a/Health/templates/Health/index.html
+++ b/Health/templates/Health/index.html
@@ -132,9 +132,9 @@
         <div class="col-md-4 col-sm-4">
           <h3>Contact Info</h3>
           <div class="space"></div>
-          <p><i class="fa fa-map-marker fa-fw pull-left fa-2x"></i>Balkumari Street<br>Lalitpur, Nepal</p>
+          <p><i class="fa fa-map-marker fa-fw pull-left fa-2x"></i>SRM<br>TAMIL NADU</p>
           <div class="space"></div>
-          <p><i class="fa fa-envelope-o fa-fw pull-left fa-2x"></i>info@ehealth.com</p>
+          <p><i class="fa fa-envelope-o fa-fw pull-left fa-2x"></i>infoSRM@ehealth.com</p>
           <div class="space"></div>
           <p><i class="fa fa-phone fa-fw pull-left fa-2x"></i>9845.....</p>
         </div>
