--- a/patient/templates/patient/heart.html
+++ b/patient/templates/patient/heart.html
@@ -8,6 +8,7 @@
     <div class="content">
                 <div class="row">
                     <div class="col-sm-12">
+                      <p>The health check evaluates a wide range of symptoms to provide a comprehensive assessment of your overall well-being. By analyzing multiple parameters, this check helps identify potential health issues early and suggests appropriate next steps for maintaining your health.</p>
                         <h4 class="page-title"><strong>Please, choose and enter following parameters.</strong></h4>
                     </div>
                 </div>
