--- a/patient/templates/patient/dashboard.html
+++ b/patient/templates/patient/dashboard.html
@@ -1,5 +1,3 @@
-
-
 {% extends "base.html" %}
 
 {% block body_content %}
@@ -8,7 +6,8 @@
   <div class="content">
               <div class="row">
                   <div class="col-sm-12">
-                      <h4 class="page-title"><strong>Please, choose at least 6 symptoms for prediction your disease.</strong></h4>
+                    <p>The disease check analyzes a wide range of symptoms to predict potential illnesses using advanced AI. This check looks at multiple symptoms to provide a broader health assessment.</p>
+                    <h4 class="page-title"><strong>Please, choose <span style="font-weight: 900; color: black;">at least 6</span> symptoms for prediction your disease.</strong></h4>
                   </div>
               </div>
           <div class="card-box" style="background-color: skyblue;">
@@ -22,6 +21,7 @@
 
         <h4>symptoms:</h4>
         <select class="selectpicker" name = 'value1' >
+          <option value="">None</option>
           <option>receiving_blood_transfusion</option>
           <option>red_sore_around_nose</option>
           <option>abnormal_menstruation</option>
@@ -37,6 +37,7 @@
         <br>
         <h4>symptoms:</h4>
         <select class="selectpicker" name = 'value2'>
+          <option value="">None</option>
           <option>back_pain</option>
           <option>unsteadiness</option>
           <option>yellow_crust_ooze</option>
@@ -51,6 +52,7 @@
         <br>
         <h4>symptoms:</h4>
         <select class="selectpicker" name = 'value3'>
+          <option value="">None</option>
           <option>lack_of_concentration</option>
           <option>coma</option>
           <option>neck_pain</option>
@@ -64,6 +66,7 @@
         <br>
         <h4>symptoms:</h4>
         <select class="selectpicker" name = 'value4' >
+          <option value="">None</option>
           <option>fast_heart_rate</option>
           <option>pain_behind_the_eyes</option>
           <option>sweating</option>
@@ -78,6 +81,7 @@
         <br>
         <h4>symptoms:</h4>
         <select class="selectpicker" name ='value5'>
+          <option value="">None</option>
           <option>dehydration</option>
           <option>loss_of_appetite</option>
           <option>abdominal_pain</option>
@@ -91,6 +95,7 @@
         <br>
         <h4>symptoms:</h4>
         <select class="selectpicker" name = 'value6'>
+          <option value="">None</option>
           <option>vomiting</option>
           <option>mild_fever</option>
           <option>high_fever</option>
