update heart model with scikit , changed index.html

--- a/Health/templates/Health/index.html
+++ b/Health/templates/Health/index.html
@@ -2,12 +2,14 @@
 
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>E-Health Care</title>
   <meta name="description" content="Free Bootstrap Theme by BootstrapMade.com">
-  <meta name="keywords" content="free website templates, free bootstrap themes, free template, free bootstrap, free website template">
+  <meta name="keywords"
+    content="free website templates, free bootstrap themes, free template, free bootstrap, free website template">
 
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans|Raleway|Candal">
   <link rel="stylesheet" type="text/css" href="{% static 'health/css/font-awesome.min.css' %}">
@@ -30,10 +32,10 @@
           <div class="col-md-12">
             <div class="navbar-header">
               <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-				        <span class="icon-bar"></span>
-				        <span class="icon-bar"></span>
-				        <span class="icon-bar"></span>
-				      </button>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+              </button>
               <a class="navbar-brand" href="/" style="color: white;"> E- Health Care</a>
             </div>
             <div class="collapse navbar-collapse navbar-right" id="myNavbar">
@@ -71,13 +73,15 @@
   <section id="cta-1" class="section-padding">
     <div class="container">
       <div class="row">
-        <div class="schedule-tab">
-          <div class="col-md-4 col-sm-4 bor-left">
+
+        <div class="col-md-6 col-sm-6">
+          <div class="schedule-tab">
             <div class="mt-boxy-color"></div>
-            <div class="medi-info">
+            <div class="medi-info text-center">
               <h3>Patient</h3>
               <div class="banner-logo text-center">
-                <img src="{% static 'health/img/patient.png' %}" class="img-responsive" style="width: 300px; height:300px">
+                <img src="{% static 'health/img/patient.png' %}" class="img-responsive center-block"
+                  style="width: 300px; height:300px">
               </div>
               <p> </p>
 
@@ -87,25 +91,30 @@
               </div>
             </div>
           </div>
+        </div>
 
-          <div class="col-md-4 col-sm-4">
-            <div class="medi-info">
-              <h3>Doctor</h3>
-              <div class="banner-logo text-center">
-                <img src="{% static 'health/img/doctor.jpg' %}" class="img-responsive" style="width: 300px; height:300px">
-              </div>
-              <p> </p>
-              <div class="banner-logo text-center">
-                <a href="/doctor/doctor_login" class="medi-info-btn">Login</a>
-              </div>
+        <!-- 
+        <div class="col-md-4 col-sm-4">
+          <div class="medi-info">
+            <h3>Doctor</h3>
+            <div class="banner-logo text-center">
+              <img src="{% static 'health/img/doctor.jpg' %}" class="img-responsive" style="width: 300px; height:300px">
+            </div>
+            <p> </p>
+            <div class="banner-logo text-center">
+              <a href="/doctor/doctor_login" class="medi-info-btn">Login</a>
             </div>
           </div>
+        </div> 
+        -->
 
-          <div class="col-md-4 col-sm-4">
-            <div class="medi-info">
+        <div class="col-md-6 col-sm-6">
+          <div class="schedule-tab">
+            <div class="medi-info text-center">
               <h3>Admin</h3>
               <div class="banner-logo text-center">
-                <img src="{% static 'health/img/admin.png' %}" class="img-responsive" style="width: 300px; height:300px">
+                <img src="{% static 'health/img/admin.png' %}" class="img-responsive center-block"
+                  style="width: 300px; height:300px">
               </div>
               <p></p>
               <div class="banner-logo text-center">
@@ -113,12 +122,12 @@
               </div>
             </div>
           </div>
-
-
         </div>
+
       </div>
     </div>
   </section>
+
   <!--cta-->
 
   <!--contact-->
@@ -140,7 +149,10 @@
         </div>
 
         <div class="col-md-8 col-sm-8 marb20">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7066.998673454132!2d85.33661487172921!3d27.670957783026054!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39eb19e58a6d1331%3A0x18ad0afdf12f826f!2sBalkumari%2C%20Lalitpur%2044600!5e0!3m2!1sen!2snp!4v1625394343648!5m2!1sen!2snp" width="600" height="500" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m23!1m12!1m3!1d7780.670790338408!2d80.04212118053617!3d12.821590317308031!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m8!3e6!4m0!4m5!1s0x3a52f769375a3f4f%3A0x4cb1f924f10a9298!2sSRM%20Global%20Hospitals%2C%20Mahatma%20Gandhi%20Rd%2C%20Potheri%2C%20SRM%20Nagar%2C%20Kattankulathur%2C%20Tamil%20Nadu%20603203!3m2!1d12.8233309!2d80.04781729999999!5e0!3m2!1sen!2sin!4v1745756723432!5m2!1sen!2sin"
+            width="600" height="500" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         </div>
 
       </div>
@@ -149,27 +161,7 @@
 
   <!--/ contact-->
   <!--footer-->
-  <footer id="footer">
-    <div class="footer-line">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12 text-center">
-            © Copyright E-Health Care. All Rights Reserved
-            <div class="credits">
-              <!--
-                All the links in the footer should remain intact.
-                You can delete the links only if you purchased the pro version.
-                Licensing information: https://bootstrapmade.com/license/
-                Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=Medilab
-              -->
-              made by <a href="#">Pradip, Sushil,Pawan and Pramod</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
 
-  </footer>
   <!--/ footer-->
 
   <script src="{% static 'health/js/jquery.min.js' %}"></script>
